test/parse-errors/need-block-context.nz.ast.tata
file-ast(
	specs: []
	aliases: []
	structs: []
	funs: [
		fun-decl(
			public?: true
			sig: sig-ast(range(0, 8), f, inststruct(range(2, 6), name-range(2, void)), [])
			body: seq-ast(
				seq-ast(
					if(bogus, literal(numeric, "0"), some(literal(numeric, "1")))
					match(
						some(bogus)
						[
							case(range(45, 57), name-range(45, some), none, literal(numeric, "0"))
							case(range(57, 68), name-range(57, none), none, literal(numeric, "1"))]))
				bogus))])
